# rp2040-serial-bootloader

./: CMakeLists.txt  bootloader.ld  combined.ld  flake.nix  standalone.ld
patches/: 001-tusb_ignore_race_condition_in_rp2040_usb_buffer_control_register.patch  002-increase_xosc_startup_delay_multiplier_to_avoid_booting_issues_after_flashing.patch
src/: main.c  tusb_config.h  usb-descriptors.c
utils/: update-limit.patch
